--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,7 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.google.code.gson:gson:2.4'
     compile 'javax.annotation:jsr250-api:1.0'
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'de.greenrobot:eventbus:2.4.0'
+    compile "com.squareup.picasso:picasso:2.4.0"
 }
